# file-suite

./: .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml  justfile
array-expr/: Cargo.toml
array-expr/src/: error.rs  function.rs  input.rs  lib.rs  paste.rs  typed_value.rs  value.rs
array-expr/src/function/: chain.rs  empty_args.rs  macros.rs  use_alias.rs
array-expr/src/function/builtin/: alias.rs  block.rs  chain.rs  chunks.rs  count.rs  enumerate.rs  intersperse.rs  join.rs  paste.rs  rand.rs  repeat.rs  rev.rs  set.rs  split.rs  take.rs
async-fs-utils/: Cargo.toml  README.md
async-fs-utils-attr/: Cargo.toml
async-fs-utils-attr-impl/: Cargo.toml
async-fs-utils-attr-impl/src/: lib.rs
async-fs-utils-attr/src/: lib.rs
async-fs-utils/src/: lib.rs
case-fold-fs/: Cargo.toml
case-fold-fs/src/: action.rs  cli.rs  db_setup.sql  file_type.rs  fs.rs  lib.rs  macros.rs
clap-complete-command/: Cargo.toml  README.md
clap-complete-command/src/: lib.rs
clap-log-level/: Cargo.toml
clap-log-level/src/: lib.rs
compile-nested/: Cargo.toml
compile-nested/src/: lib.rs  main.rs
completions-cli/src/: lib.rs
file-suite/: Cargo.toml  README.md  build.rs  tools.json
file-suite-build/: Cargo.toml  README.md
file-suite-build/src/: lib.rs  main.rs
file-suite-common/: Cargo.toml
file-suite-common/src/: lib.rs  run.rs  start.rs  startable.rs
file-suite-dyn/: Cargo.toml  README.md
file-suite-dyn/src/: any_conv.rs  any_of.rs  lib.rs
file-suite-proc/: Cargo.toml  KEBABEXPR.md
file-suite-proc-impl/: Cargo.toml
file-suite-proc-impl/src/: array_expr.rs  error.rs  kebab.rs  lib.rs  run.rs  sizes.rs  typed_value.rs  util.rs  value.rs
file-suite-proc-impl/src/array_expr/: from_values.rs  function.rs  input.rs  paste.rs  storage.rs  typed_value.rs  value.rs  value_array.rs
file-suite-proc-impl/src/array_expr/function/: arg.rs  call.rs  case.rs  chain.rs  count.rs  deferred_args.rs  empty_args.rs  enumerate.rs  from_arg.rs  join.rs  keyword_function.rs  macros.rs  optional_delimited.rs  rev.rs  single_arg.rs  split.rs  to_arg.rs  ty.rs  use_alias.rs
file-suite-proc-impl/src/array_expr/function/builtin/: alias.rs  block.rs  case.rs  chain.rs  chunk.rs  chunks.rs  clear.rs  count.rs  enumerate.rs  fork.rs  get.rs  intersperse.rs  join.rs  nth.rs  paste.rs  repeat.rs  rev.rs  set.rs  shift.rs  skip.rs  split.rs  stairs.rs  take.rs  trim.rs  ty.rs  use_alias.rs
file-suite-proc-impl/src/kebab/: case.rs  combine.rs  input.rs  output.rs  paste.rs  split.rs  value.rs
file-suite-proc-impl/src/util/: any_of.rs  delimited.rs  fold_tokens.rs  group_help.rs  kw_kind.rs  lookahead.rs  lookahead_parse.rs  neverlike.rs  parse_wrap.rs  spanned_int.rs  tcmp.rs  to_tokens_enum.rs  to_tokens_macros.rs
file-suite-proc-impl/src/util/group_help/: delimited.rs  delimited_option.rs  empty_delimited.rs  optional_delimited.rs
file-suite-proc-lib/src/: __private.rs  from_arg.rs  kw_kind.rs  lib.rs  lookahead.rs  punct_wrap.rs  spanned_int.rs  to_arg.rs  to_tokens_macros.rs  tokens_rc.rs
file-suite-proc/src/: lib.rs
file-suite-template/: Cargo.toml  README.md
file-suite-template/src/: lib.rs
file-suite/src/: lib.rs  main.rs
fold-tokens/: Cargo.toml
fold-tokens/src/: lib.rs  visit_tokens.rs
generate-keyfile/: .gitignore  Cargo.toml  README.md
generate-keyfile/src/: lib.rs  main.rs
group-by-pattern/: Cargo.toml
group-by-pattern/src/: lib.rs
insensitive-buf/: Cargo.toml
insensitive-buf/src/: insensitive_buf.rs  lib.rs
libs/completions-cli/: Cargo.toml
libs/completions-cli/src/: lib.rs
libs/insensitive-buf/: Cargo.toml
libs/insensitive-buf/src/: insensitive_ref.rs
libs/log-level-cli/: README.md
libs/parse-fmt/: Cargo.toml
libs/parse-fmt/src/: lookup.rs
libs/reflink-at/examples/: reflink.rs
log-level-cli/: Cargo.toml
log-level-cli/src/: lib.rs
macros/array-expr/: TODO.md
macros/array-expr/src/: from_values.rs  function.rs  storage.rs  value.rs  value_array.rs
macros/array-expr/src/function/: arg.rs  call.rs  deferred_args.rs  delimited.rs  keyword_function.rs  optional_delimited.rs  single_arg.rs
macros/file-suite-proc/: README.md
macros/file-suite-proc-lib/: Cargo.toml  TODO.md
macros/file-suite-proc-lib/src/: __private.rs  lookahead.rs  macro_delim.rs
macros/fold-tokens/src/: cursor.rs  fold_tokens.rs
macros/tokens-rc/src/: token_tree.rs  tokens_rc.rs
macros/wrap-blocking-attr/: Cargo.toml
parse-fmt/src/: lib.rs
path-is-utf8/: Cargo.toml  README.md
path-is-utf8/src/: lib.rs  main.rs
pipe-size/: Cargo.toml
pipe-size/src/: lib.rs  main.rs
quick-dupes/: Cargo.toml
quick-dupes/src/: cli.rs  error.rs  fmt_oneshot.rs  group_summary.rs  main.rs  observer.rs
re-tile/: Cargo.toml  README.md
re-tile/src/: completions.rs  logging.rs  main.rs  transform.rs
read-structured/: Cargo.toml
read-structured/src/: main.rs
recursive-lowercase/: Cargo.toml  deny.toml
recursive-lowercase/src/: lib.rs  main.rs
reflink-at/: Cargo.toml
run-derive/: Cargo.toml
run-derive/src/: lib.rs
scripts/: test-group-by.zsh
tokens-rc/: Cargo.toml
tokens-rc/src/: group.rs  lib.rs  opaque_group.rs  token_range.rs  token_tree.rs
tools/: TODO.md
tools/arg-shell/: Cargo.toml  README.md  ast.md
tools/arg-shell/src/: alias.rs  ast.rs  bytestr.rs  exec.rs  lib.rs  smallvec.rs  token.rs  withspan.rs
tools/arg-shell/src/ast/: arg.rs
tools/arg-shell/src/exec/: arg.rs  ast.rs  call.rs  cmdline.rs  fstring.rs
tools/common-prefix/: Cargo.toml
tools/common-prefix/src/: lib.rs
tools/compile-nested/: README.md
tools/compile-nested/src/: lib.rs
tools/generate-keyfile/src/: main.rs
tools/group-by-pattern/src/: lib.rs  lookup_chunk.rs
tools/path-is-utf8/: Cargo.toml
tools/path-is-utf8/src/: lib.rs
tools/pipe-size/: README.md
tools/quick-dupes/src/: cli.rs  error.rs  main.rs
tools/read-structured/: README.md
tools/recursive-lowercase/src/: lib.rs  main.rs
wrap-blocking-attr/: Cargo.toml
wrap-blocking-attr-impl/: Cargo.toml
wrap-blocking-attr-impl/src/: lib.rs
wrap-blocking-attr/src/: lib.rs
(+15 files in other folders)
