[workspace]
members = [
  "file-suite",
  "file-suite-build",
  "file-suite-common",
  "file-suite-dyn",
  "file-suite-template",
  "libs/completions-cli",
  "libs/insensitive-buf",
  "libs/log-level-cli",
  "libs/parse-fmt",
  "libs/reflink-at",
  "macros/array-expr",
  "macros/file-suite-proc",
  "macros/file-suite-proc-lib",
  "macros/fold-tokens",
  "macros/run-derive",
  "macros/tokens-rc",
  "macros/wrap-blocking-attr",
  "macros/wrap-blocking-attr-impl",
  "tools/compile-nested",
  "tools/generate-keyfile",
  "tools/group-by-pattern",
  "tools/path-is-utf8",
  "tools/pipe-size",
  "tools/quick-dupes",
  "tools/re-tile",
  "tools/read-structured",
  "tools/recursive-lowercase",
  "tools/common-prefix",
]
resolver = "2"
default-members = ["file-suite"]

[profile.release]
strip = true
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
allow_attributes = "warn"
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
future_not_send = "warn"
missing_const_for_fn = "warn"

[workspace.dependencies]
ab_glyph = "0.2.29"
array-expr = { path = "macros/array-expr" }
bytemuck = "1.21.0"
bytesize = "2.0.1"
chumsky = "0.10.1"
clap = "4.5.36"
clap_complete = "4.5.47"
color-eyre = "0.6.3"
compile-nested = { path = "tools/compile-nested" }
completions-cli = { path = "libs/completions-cli" }
common-prefix = { path = "tools/common-prefix" }
convert_case = "0.8.0"
crossbeam = "0.8.4"
derive_more = "2.0.1"
either = "1.15.0"
env_logger = "0.11.8"
file-suite-build = { path = "file-suite-build" }
file-suite-common = { path = "file-suite-common" }
file-suite-proc = { path = "macros/file-suite-proc" }
file-suite-proc-lib = { path = "macros/file-suite-proc-lib" }
fold-tokens = { path = "macros/fold-tokens" }
futures-core = "0.3.30"
generate-keyfile = { path = "tools/generate-keyfile" }
getrandom = "0.3.2"
group-by-pattern = { path = "tools/group-by-pattern" }
hashbrown = "0.15.5"
image = "0.25.6"
imageproc = "0.25.0"
insensitive-buf = { path = "libs/insensitive-buf" }
itertools = "0.14.0"
libc = "0.2.158"
log = "0.4.22"
log-level-cli = { path = "libs/log-level-cli" }
nix = "0.29.0"
parse-fmt = { path = "libs/parse-fmt" }
paste = "1.0.15"
path-is-utf8 = { path = "tools/path-is-utf8" }
patharg = "0.4.0"
pipe-size = {  path = "tools/pipe-size" }
pretty_assertions = "1.4.1"
prettyplease = "0.2.37"
proc-macro2 = "1.0.86"
quote = "1.0.37"
rand = "0.9.1"
rayon = "1.10.0"
reflink-at = { path = "libs/reflink-at" }
regex = "1.11.1"
run-derive = { path = "macros/run-derive" }
rusqlite = "0.34.0"
rustc-hash = "2.1.1"
rustix = "1.0.5"
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
smallvec = "1.13.2"
symlink = "0.1.0"
syn = "2.0.79"
tap = "1.0.1"
thiserror = "2.0.12"
tinyvec = "1.9.0"
tokens-rc = { path = "macros/tokens-rc" }
tokio = "1.40.0"
tokio-stream = "0.1.16"
toml = "0.8.20"
walkdir = "2.5.0"
wrap-blocking-attr-impl = { path = "macros/wrap-blocking-attr-impl" }
