[package]
name = "clap-complete-command"
version = "0.1.0"
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
patharg = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
