[package]
name = "compile-nested"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Axel Lord"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
log-level-cli = { path = "../log-level-cli" }
color-eyre = { workspace = true }
env_logger = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
symlink = { workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true
