[package]
name = "compile-nested"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Axel Lord"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
file-suite-common = { version = "0.1.0", path = "../file-suite-common" }
itertools = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
symlink = { workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true
