[package]
name = "file-suite-common"
version = "0.1.0"
edition = "2024"

[features]
default = ["derive"]
derive = ["dep:file-suite-proc"]

[dependencies]
clap = { workspace = true }
color-eyre.workspace = true
file-suite-proc = { workspace = true, optional = true }
log-level-cli.workspace = true
thiserror.workspace = true

[lints]
workspace = true
