[package]
name = "file-suite-proc-impl"
version = "0.1.0"
edition = "2024"

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
rand = "0.9.1"

[lints]
workspace = true

[[bin]]
name = "type-sizes"
path = "src/sizes.rs"
