[package]
name = "file-suite"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
compile-nested = { version = "0.2.0", path = "../compile-nested" }
completions-cli = { version = "0.1.0", path = "../completions-cli" }
file-suite-common = { workspace = true }
file-suite-proc = { version = "0.1.0", path = "../file-suite-proc" }
generate-keyfile = { version = "0.2.0", path = "../generate-keyfile" }
log.workspace = true
paste.workspace = true
path-is-utf8 = { version = "0.1.0", path = "../path-is-utf8" }
pipe-size = { version = "0.1.0", path = "../pipe-size" }

[lints]
workspace = true
