[package]
name = "generate-keyfile"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Axel Lord"]

[dependencies]
clap = { version = "4.5.36" }
getrandom = { version = "0.3.2", features = ["std"] }
rustix = { version = "1.0.5", features = ["mm", "fs"] }

[lints]
workspace = true
