[package]
name = "generate-keyfile"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Axel Lord"]

[dependencies]
clap = { workspace = true }
getrandom = { workspace = true, features = ["std"] }
rustix = { workspace = true, features = ["mm", "fs"] }

[lints]
workspace = true
