[package]
name = "insensitive-buf"
version = "0.1.0"
edition = "2021"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0.210", features = ["derive"], optional = true }
log = { version = "0.4.22" }
tinyvec = { version = "1.8.1", features = ["alloc"], optional = true }
bytemuck = { version = "1.21.0", features = ["derive"] }

[dev-dependencies]
env_logger = "0.11.5"

[features]
default = [ "std" ]
alloc = [ "dep:tinyvec" ]
serde = [ "alloc", "dep:serde" ]
std = [ "alloc" ]

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
allow_attributes = "warn"
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
future_not_send = "warn"
missing_const_for_fn = "warn"
