[package]
name = "insensitive-buf"
version = "0.1.0"
edition = "2021"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
log = { workspace = true }
tinyvec = { workspace = true, features = ["alloc"], optional = true }
bytemuck = { workspace = true, features = ["derive"] }

[dev-dependencies]
env_logger = { workspace = true }

[features]
default = [ "std" ]
alloc = [ "dep:tinyvec" ]
serde = [ "alloc", "dep:serde" ]
std = [ "alloc" ]

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
allow_attributes = "warn"
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
future_not_send = "warn"
missing_const_for_fn = "warn"
