[package]
name = "log-level-cli"
version = "0.1.0"
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
patharg = { workspace = true }

[lints]
workspace = true
