[package]
name = "path-is-utf8"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Axel Lord"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
file-suite-common = { version = "0.1.0", path = "../file-suite-common" }
rayon.workspace = true
walkdir.workspace = true

[lints]
workspace = true
