[package]
name = "pipe-size"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Axel Lord"]

[dependencies]
bytesize = { workspace = true }
clap = { workspace = true, features = ["derive"] }
file-suite-common = { version = "0.1.0", path = "../file-suite-common" }

[lints]
workspace = true
