[package]
name = "quick-dupes"
version = "0.1.0"
edition = "2021"

[dependencies]
bytesize = "1.3.2"
clap = { version = "4.5.30", features = ["derive"] }
clap-log-level = { git = "https://github.com/axel-lord/clap-log-level", version = "0.1.0" }
color-eyre = "0.6.3"
crossbeam = "0.8.4"
derive_more = { version = "2.0.1", features = ["constructor", "is_variant"] }
env_logger = "0.11.6"
insensitive-buf = { git = "https://github.com/axel-lord/insensitive-buf", version = "0.1.0" }
libc = "0.2.169"
log = "0.4.26"
patharg = "0.4.0"
rayon = "1.10.0"
regex = "1.11.1"
rusqlite = "0.33.0"
rustc-hash = "2.1.1"
sha2 = "0.10.8"
thiserror = "2.0.11"
tinyvec = { version = "1.8.1", features = ["std"] }
walkdir = "2.5.0"
