[package]
name = "quick-dupes"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Axel Lord"]

[dependencies]
bytesize = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap-log-level = { workspace = true }
color-eyre = { workspace = true }
crossbeam = { workspace = true }
derive_more = { workspace = true, features = ["constructor", "is_variant"] }
env_logger = { workspace = true }
insensitive-buf = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
patharg = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
rusqlite = { workspace = true }
rustc-hash = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tinyvec = { workspace = true, features = ["std"] }
walkdir = { workspace = true }

[lints]
workspace = true
