[package]
name = "re-tile"
version = "0.1.0"
edition = "2021"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[dependencies]
ab_glyph = "0.2.29"
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.35"
color-eyre = "0.6.3"
either = "1.13.0"
env_logger = "0.11.5"
image = "0.25.4"
imageproc = "0.25.0"
log = "0.4.22"
paste = "1.0.15"
patharg = "0.4.0"
tap = "1.0.1"

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
allow_attributes = "warn"
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
future_not_send = "warn"
missing_const_for_fn = "warn"
