[package]
name = "re-tile"
version = "0.1.0"
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[dependencies]
ab_glyph = "0.2.29"
clap = { version = "4.5.36", features = ["derive"] }
clap_complete = "4.5.47"
color-eyre = "0.6.3"
either = "1.15.0"
env_logger = "0.11.8"
image = "0.25.6"
imageproc = "0.25.0"
log = "0.4.27"
paste = "1.0.15"
patharg = "0.4.0"
tap = "1.0.1"

[lints]
workspace = true
