[package]
name = "re-tile"
version = "0.1.0"
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[dependencies]
ab_glyph = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
color-eyre = { workspace = true }
either = { workspace = true }
env_logger = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
patharg = { workspace = true }
tap = { workspace = true }

[lints]
workspace = true
