[package]
name = "read-structured"
version = "0.1.0"
edition = "2024"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.36", features = ["derive"] }
derive_more = "2.0.1"
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tap = "1.0.1"
thiserror = "2.0.12"
toml = "0.8.20"

[lints]
workspace = true
