[package]
name = "read-structured"
version = "0.1.0"
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["display"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tap = "1.0.1"
thiserror = "2.0.12"
toml = "0.8.20"

[lints]
workspace = true
