[package]
name = "read-structured"
version = "0.1.0"
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, features = ["display"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tap = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
