[package]
name = "recursive-lowercase"
version = "0.1.0"
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
color-eyre = "0.6.3"
env_logger = "0.11.8"
log = "0.4.27"
tokio = { version = "1.44.2", features = ["fs", "rt"] }
insensitive-buf = { git = "https://github.com/axel-lord/insensitive-buf" }
nix = { version = "0.29.0", features = ["fs"] }
async-fs-utils = { git = "https://github.com/axel-lord/async-fs-utils" }
thiserror = "2.0.12"
libc = "0.2.171"
tokio-stream = "0.1.17"

[lints]
workspace = true
