[package]
name = "recursive-lowercase"
version = "0.1.0"
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt"] }
insensitive-buf = { workspace = true }
nix = { workspace = true, features = ["fs"] }
async-fs-utils = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
tokio-stream = { workspace = true }

[lints]
workspace = true
