[package]
name = "recursive-lowercase"
version = "0.1.0"
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
log = { workspace = true }
insensitive-buf = { workspace = true }

[lints]
workspace = true
