[package]
name = "reflink-at"
version = "0.1.0"
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[dependencies]
libc = "0.2.171"
nix = { version = "0.29.0", features = ["ioctl", "fs"] }
thiserror = "2.0.12"

[dev-dependencies]
clap = { version = "4.5.36", features = ["derive"] }
color-eyre = "0.6.3"
log = { version = "0.4.27" }
env_logger = "0.11.8"

[lints]
workspace = true
