[package]
name = "reflink-at"
version = "0.1.0"
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[dependencies]
libc = { workspace = true }
nix = { workspace = true, features = ["ioctl", "fs"] }
thiserror = { workspace = true }

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[lints]
workspace = true
