[package]
name = "wrap-blocking-attr-impl"
version = "0.1.0"
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }

[lints]
workspace = true
