[package]
name = "arg-shell"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Axel Lord"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, features = ["is_variant", "unwrap", "deref", "deref_mut", "as_ref", "from", "into"] }
file-suite-common.workspace = true
chumsky.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
termcolor.workspace = true

[lints]
workspace = true
