[package]
name = "common-prefix"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Axel Lord"]

[dependencies]
chumsky.workspace = true
clap = { workspace = true, features = ["derive"] }
file-suite-common.workspace = true
itertools.workspace = true
tap.workspace = true

[lints]
workspace = true
